[package]
name = "measure"
version = "0.1.0"
authors = ["phrv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
tokio = {version = "0.2.12", features = ["full"] }
futures = "0.3.4"
nix = "0.17.0"
serde_json = "1.0.48"
serde = {version = "1.0.104", features = ["derive"] }
csv = "1.1.3"
from_hashmap = { path = "from_hashmap"} 
