[package]
name = "benchmark"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disk = {path = "../disk"}
cpu = {path = "../cpu"}
network = {path = "../network"}
memory = {path = "../memory"}