[package]
name = "memory"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.7.3", features = ["small_rng"]}
clap = "2.33.0"
bencher = "0.1.5"
num_cpus = "1.12.0"
