[package]
name = "scheduler"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
handlebars = "3.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.4"
futures = "0.3.4"
pharos = "0.4.2"
fern = {version = "0.6" , features = ["colored"]}
log = "0.4.8"
chrono = "0.4.11"
contest-algorithms = "0.1.4"
mcmf = {path = "../mcmf"}
