[package]
name = "scheduler_agent"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchmark = { path = "../benchmark"}
tokio = { version = "0.2", features = ["full"] }
prost = "0.6"
tonic = "0.2"
machine-id = "0.3.0"

[build-dependencies]
tonic-build = "0.2"
