[package]
name = "scheduler_agent"
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchmark = { path = "../benchmark"}
measure = { path = "../measure"}
tokio = { version = "0.2", features = ["full"] }
prost = "0.6"
tonic = "0.2"
machine-id = "0.3.0"
openssl = { version = '0.10', features = ["vendored"] }
futures = "0.3"
hostname = "^0.3"
bollard = "0.5"
log = "0.4"
futures-util = "0.3"
fern = {version = "0.6" , features = ["colored"]}
chrono = "0.4"
sys-info = "0.6"

[build-dependencies]
tonic-build = "0.2"
